RESOLVED FIXED 249138
An AudioSession should not get uninterrupted right away after being interrupted
https://bugs.webkit.org/show_bug.cgi?id=249138
Summary An AudioSession should not get uninterrupted right away after being interrupted
youenn fablet
Reported 2022-12-12 05:29:18 PST
An AudioSession should not get uninterrupted right away after being interrupted
Attachments
Radar WebKit Bug Importer
Comment 1 2022-12-12 07:31:35 PST
youenn fablet
Comment 2 2022-12-12 07:42:30 PST
EWS
Comment 3 2022-12-14 07:49:49 PST
Committed 257854@main (61e24c7fa0d0): <https://commits.webkit.org/257854@main> Reviewed commits have been landed. Closing PR #7490 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.