An AudioSession should not get uninterrupted right away after being interrupted https://bugs.webkit.org/show_bug.cgi?id=249138 rdar://problem/103253664

Reviewed by Eric Carlson.

Fix computation of whether active changed by calling isActive() so that it wokrs with RemoteAudioSession.
Compute the new session state in case of change asynchronously so that, we do not reactivate the AudioSession due to one media element being interrupted and another not yet interrupted.

Updated GPUProcess memory pressure exit test case to delay a bit the memory pressure signal after the document gets navigated.
This is due to the AudioSession setup that might be done asynchronously.

Covered by newly added test.

* LayoutTests/TestExpectations:
* LayoutTests/media/audioSession/ios/audioSessionState-getUserMedia-expected.txt: Added.
* LayoutTests/media/audioSession/ios/audioSessionState-getUserMedia.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/platform/audio/AudioSession.cpp:
(WebCore::AudioSession::tryToSetActive):
* Source/WebCore/platform/audio/PlatformMediaSessionManager.cpp:
* Source/WebCore/platform/audio/PlatformMediaSessionManager.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/GPUProcess.mm:

Canonical link: https://commits.webkit.org/257854@main